test/spec_vectors/i32/fail/module_34.wat
(module (func $type-binary-2nd-operand-empty-in-br_table (i32.const 0) (block (br_table 0 (i32.const 0) (i32.add)) (drop))))